--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
@@ -8,7 +7,7 @@
     "skipLibCheck": true,
 
     /* Bundler mode */
-    "moduleResolution": "Bundler",
+    "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
@@ -19,16 +18,7 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true,
-
-  "typeRoots": [
-    "./node_modules/@types",
-    "./src/types"  // or wherever you put your .d.ts files
-  ],
-
-  },"include": [
-  "src/**/*",
-  "src/**/*.d.ts"
-]
+    "noFallthroughCasesInSwitch": true
+  },
+  "include": ["src"]
 }
